--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link rel="stylesheet" href="./css/index.css">
-  <title>InnerJoyment</title>
+  <title>Design Your Life</title>
 </head>
 <body>
   <header>
