--- a/product.html
+++ b/product.html
@@ -1,27 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-  <link rel="stylesheet" href="./css/index.css">
-  <title>Design Your Life</title>
-</head>
-<body>
-  <header>
-    <nav>
-      <a href="./index.html">home</a>
-      <a href="./about.html">about</a>
-      <a href="./product.html">product</a>
-      <a href="./login.html">login</a>
-    </nav>
-  </header>
-  <main>
-
-  </main>
-  <footer>
-
-  </footer>
-</body>
+    <link rel="stylesheet" href="./css/index.css" />
+    <title>Design Your Life : Product</title>
+  </head>
+  <body>
+    <header>
+      <!-- add hamburger menu, will transform to an X to close and be responsive-->
+      <div class="row">
+        <div>
+          <h1>Design Your Life</h1>
+        </div>
+        <div class="menu-btn">
+          <div class="btn-line"></div>
+          <div class="btn-line"></div>
+          <div class="btn-line"></div>
+        </div>
+      </div>
+      <nav class="menu">
+        <ul class="menu-nav">
+          <li class="nav-item">
+            <a href="./index.html">home</a>
+          </li>
+          <li class="nav-item">
+            <a href="./about.html">about</a>
+          </li>
+          <li class="nav-item current">
+            <a href="./product.html">product</a>
+          </li>
+          <li class="nav-item">
+            <a class="open-login-modal">log in</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <div class="login-box">
+      <div class="login-header">
+        <h2>Login or Register</h2>
+        <div>
+          <div class="modal-menu-btn">
+            <div class="btn-line"></div>
+            <div class="btn-line"></div>
+          </div>
+        </div>
+      </div>
+      <form action="">
+        <div class="input-box">
+          <input type="text" name="" required="" />
+          <label for="">User Name:</label>
+        </div>
+        <div class="input-box">
+          <input type="password" name="" required="" />
+          <label for="">Password:</label>
+        </div>
+        <input type="submit" name="" value="Log In / Register" />
+      </form>
+    </div>
+    <main> </main>
+    <footer> </footer>
+    <script src="js/main.js"></script>
+  </body>
 </html>
