changed link to login

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
             <a href="./product.html">product</a>
           </li>
           <li class="nav-item">
-            <a class="open-login-modal">log in</a>
+            <!-- <a class="open-login-modal">log in</a> -->
+            <a href="https://design-your-life.netlify.com/">Log In</a>
           </li>
         </ul>
       </nav>
     </header>
-    <div class="login-box">
+    <!-- <div class="login-box">
       <div class="login-header">
         <h2>Login or Register</h2>
         <div>
@@ -59,7 +60,7 @@
         </div>
         <input type="submit" name="" value="Log In / Register" />
       </form>
-    </div>
+    </div> -->
     <main>
       <article class="full-width">
         <section>
