--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         </li>
         <li class="nav-item">
           <!-- <a class="open-login-modal">log in</a> -->
-          <a href="https://design-your-life.netlify.com/">Log In</a>
+          <a href="https://design-your-life.netlify.com/">log in</a>
         </li>
       </ul>
     </nav>
