--- a/about.html
+++ b/about.html
@@ -55,12 +55,13 @@
         <section class="top-content-section">
             <div class="top-text-content">
               <h2>Enjoyment</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-  
+              <p>Enjoyment is "the state or process of taking pleasure in something." By participating in Design Your Life, you will
+                be able to not only keep track of the activities and events that give you pleasure, but you'll also be able 
+                to determine which events are robbing from enjoyment. This will give you the opportunity to take stock in your life today 
+                and see where you need to make changes, where you need to refocus, and how to set yourself on a path that will
+                ensure you're finding enjoyment in all you do. 
+              </p>
+              </div>
             <img src="img/enjoyment.png" alt="Design Your Life!" class="enjoyment">
         </section>
 
@@ -70,10 +71,11 @@
                <br>
               <div class="energized-text">
                 <h2>Energized</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>It's time to get energized. To find passion in what you do. To be motivated for change and create the life you've always wanted. 
+                  We've all heard "fatigue begets fatigue." The same is true about energy, movement, and motivation. 
+                  When you discover the actions that give you a renewed energy, you will desire to continue on that path.
+                  With Design Your Life, you will find a new strength and new direction for life that gives you an energy like never before. 
+                   </p>
               </div>
         </section>
 
@@ -81,10 +83,11 @@
            
         <section class="engaged-section">
           <h2>Engaged</h2>
-                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                 <p>Life was never intended to be a spectator sport. Once you've discovered your true passions and the aspects of life that 
+                   give you enjoyment and renewed energy, it's time to engage others. To become part of something that will help you 
+                   create a mark on this world and leave a legacy. The greatest legacy is a life well lived. A life of no regrets. A life enjoyed. 
+                   Sign up for Design Your Life Today to being living your best life. 
+                 </p>
       
                     <img src="img/engagement.png" alt="Get engaged with the world around you!" class="engage-img">
           </section>
